[tool.poetry]
name = "app"
version = "0.1.0"
description = "Fun sandbox app"
authors = ["john chambers <john.chambers@horizondiscovery.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
sqlalchemy = "^1.4.45"
Flask-WTF = "^1.0.1"
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
